# mememo

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  install.bat  install.sh  pyproject.toml  requirements.txt  warmup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
benchmarks/: hooks_perf.py
hooks/: README.md  hooks.json  stop.sh  user-prompt.sh
mememo/: LICENSE  __init__.py  __main__.py  cli.py  server.py
mememo/chunking/: __init__.py  base_chunker.py  factory.py  language_detector.py  python_ast_chunker.py  text_chunker.py  tree_sitter_chunker.py
mememo/config/: providers.yaml
mememo/context/: __init__.py  adaptive_builder.py  intent_classifier.py  response_compressor.py  skill_store.py
mememo/core/: __init__.py  git_manager.py  llm_adapter.py  memory_manager.py  storage_manager.py  vector_index.py
mememo/embeddings/: __init__.py  embedder.py
mememo/indexing/: __init__.py  merkle_dag.py
mememo/tools/: __init__.py  batch_store.py  capture.py  check_memory.py  cleanup_memory.py  delete_memory.py  end_session.py  index_repository.py  list_memories.py  manage_skill.py  recall_context.py  recent_context.py  refresh_memory.py  retrieve_memory.py  schemas.py  search_similar.py  store_decision.py  store_memory.py  summarize_context.py  sync_commits.py
mememo/types/: __init__.py  config.py  memory.py
mememo/utils/: __init__.py  hashing.py  secrets_detector.py  token_counter.py
tests/: __init__.py  bench_smart_context.py  test_adaptive_builder.py  test_cleanup_memory.py  test_config.py  test_integration.py  test_intent_classifier.py  test_response_compressor.py  test_skill_store.py
